fixed issue where footer link was covered by preceding elements

--- a/src/App.scss
+++ b/src/App.scss
@@ -521,8 +521,10 @@
     margin-bottom: .2rem;
     display: flex;
     justify-content: center;
-    
     color: var(--footer-color);
+
+    position: relative;
+    z-index: 999;
 
     & > *:not(:last-child)::after {
       content: '•';
